[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/enemy_zombie.png" type="Texture" id=1]
[ext_resource path="res://objects/enemies/Zombie.gd" type="Script" id=2]
[ext_resource path="res://objects/HitboxEnemy.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 1.5, 1.6, 1.7, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.51548, 20.1512 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 64, 24 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5.77069, 20.7986 )

[node name="Zombie" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 8
script = ExtResource( 2 )

[node name="TimerHurt" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
__meta__ = {
"_editor_description_": "activado al ser herido, mientras esté activo no podrá ser herido"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.44532, -20.2359 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -25 )
texture = ExtResource( 1 )
offset = Vector2( -2.489, 0 )
hframes = 16
frame = 1

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1.90735e-06, -59.25 )
scale = Vector2( 2.4, 6.075 )
process_parent = true
physics_process_parent = true

[node name="AreaDetectPlayer" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.254902 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetectPlayer"]
position = Vector2( 0, -24 )
shape = SubResource( 5 )

[node name="HitboxEnemy" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitboxEnemy"]
position = Vector2( 0, -21 )
shape = SubResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="body_entered" from="AreaDetectPlayer" to="." method="_on_AreaDetectPlayer_body_entered"]
